llm_call, create_messages_pipeline

--- a/llm_call.ipynb
+++ b/llm_call.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -98,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,24 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Init llm model\n",
-    "from langchain_ibm import WatsonxLLM\n",
     "params_dic= {\n",
     "    \"decoding_method\": \"greedy\",\n",
-    "    \"temperature\": 0,\n",
-    "    \"min_new_tokens\": 5,\n",
-    "    \"max_new_tokens\": 5000,\n",
-    "    # \"stop_sequences\": [\"\\n\\n\"]\n",
+    "    \"min_new_tokens\": 0,\n",
+    "    \"max_new_tokens\": 300,\n",
+    "    \"repetition_penalty\": 1,\n",
+    "    \"stop_sequences\": [\"Vasco.\"]\n",
     "}\n",
     "llm = WatsonxLLM(\n",
     "    model_id=\n",
-    "            # \"meta-llama/llama-3-405b-instruct\",\n",
-    "            # \"meta-llama/llama-3-2-90b-vision-instruct\",\n",
-    "            # 'ibm/granite-13b-instruct-v2',\n",
     "           'ibm/granite-3-8b-instruct',\n",
     "            \n",
     "    url=url,\n",
@@ -193,31 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prompt_text=\"\"\"   \n",
-    "# Eres un asistente especializado en el análisis de métricas de calidad del agua potable. \n",
-    "# Se te ha proporcionado un historial de 10 muestras tomadas en diferentes momentos en un mismo punto de agua potable:\n",
-    "\n",
-    "# \"{datos_calidad_agua}\"\n",
-    "\n",
-    "# Analiza los datos proporcionados evaluando si el valor más reciente presenta una desviación significativa respecto a la tendencia general observada en las muestras anteriores. \n",
-    "\n",
-    "# Devuelve solo el resumen de tu evaluación con una longitud de 1000 tokens aproximadamente.\n",
-    "\n",
-    "# Respuesta:\n",
-    "# \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Json filtrado\n",
+    "# Json obtenido del pipeline de analyze_water_data\n",
     "total_water_data= {\n",
     "    \"city\": \"DONOSTIA-SAN SEBASTIAN\",\n",
     "    \"water_tank_name\": \"Deposito de Putzueta\",\n",
@@ -225,42 +207,42 @@
     "    \"component\": [\n",
     "        {\n",
     "            \"name\": \"CLORO LIBRE RESIDUAL\",\n",
-    "            \"current_value\": 0.706516,\n",
-    "            \"lower_threshold\": 0.598553,\n",
-    "            \"upper_threshold\": 0.727444,\n",
-    "            \"median\": 0.669013,\n",
+    "            \"current_value\": 0.706,\n",
+    "            \"lower_threshold\": 0.598,\n",
+    "            \"upper_threshold\": 0.727,\n",
+    "            \"median\": 0.669,\n",
     "            \"component_alert\": \"OK\"\n",
     "        },\n",
     "        {\n",
     "            \"name\": \"CONDUCTIVIDAD (20ºC)\",\n",
-    "            \"current_value\": 118.411114,\n",
-    "            \"lower_threshold\": 120.4888685,\n",
-    "            \"upper_threshold\": 129.752204,\n",
-    "            \"median\": 124.981083,\n",
+    "            \"current_value\": 118.411,\n",
+    "            \"lower_threshold\": 120.488,\n",
+    "            \"upper_threshold\": 129.752,\n",
+    "            \"median\": 124.981,\n",
     "            \"component_alert\": \"KO\"\n",
     "        },\n",
     "        {\n",
     "            \"name\": \"PH (20ºC)\",\n",
-    "            \"current_value\": 7.700241,\n",
-    "            \"lower_threshold\": 7.426106000000001,\n",
-    "            \"upper_threshold\": 7.6423135,\n",
-    "            \"median\": 7.548733,\n",
+    "            \"current_value\": 7.700,\n",
+    "            \"lower_threshold\": 7.426,\n",
+    "            \"upper_threshold\": 7.642,\n",
+    "            \"median\": 7.548,\n",
     "            \"component_alert\": \"KO\"\n",
     "        },\n",
     "        {\n",
     "            \"name\": \"TEMPERATURA\",\n",
-    "            \"current_value\": 16.201304,\n",
-    "            \"lower_threshold\": 11.151199,\n",
-    "            \"upper_threshold\": 14.4083635,\n",
-    "            \"median\": 12.619121,\n",
+    "            \"current_value\": 16.201,\n",
+    "            \"lower_threshold\": 11.151,\n",
+    "            \"upper_threshold\": 14.408,\n",
+    "            \"median\": 12.619,\n",
     "            \"component_alert\": \"KO\"\n",
     "        },\n",
     "        {\n",
     "            \"name\": \"TURBIDEZ\",\n",
-    "            \"current_value\": 0.019427,\n",
-    "            \"lower_threshold\": 0.0400595,\n",
-    "            \"upper_threshold\": 0.150398,\n",
-    "            \"median\": 0.084434,\n",
+    "            \"current_value\": 0.019,\n",
+    "            \"lower_threshold\": 0.040,\n",
+    "            \"upper_threshold\": 0.150,\n",
+    "            \"median\": 0.084,\n",
     "            \"component_alert\": \"KO\"\n",
     "        }\n",
     "    ]\n",
@@ -269,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,137 +273,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt_text = \"\"\"\n",
-    "Given the following JSON file containing information about sensor readings from a water tank, including the city, the name of the water tank, the components being monitored, their acceptable thresholds, and their current measured values:\n",
-    "\n",
-    "{water_data}\n",
-    "\n",
-    "Write a formal email addressed to the City Council of {city_name}. The email should clearly and professionally state that we have analyzed the sensor data from the specified water tank and identified that some parameters have exceeded their acceptable thresholds. Mention the specific components affected, their current values, and the corresponding thresholds. Indicate that this anomaly could be due to a potential sensor malfunction, and suggest conducting a technical inspection to verify the status of the equipment. The message should be concise, professional, and direct.\n",
-    "\n",
-    "End the email should be signed with the following line:\n",
-    "\"This email was generated by the AI agent of the Minsaiters team after analyzing water quality sensor data from Pais Vasco.\"\n",
-    "\"\"\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# promt_text= \"\"\"    \n",
-    "# Eres un asistente experto en analizar metricas de calidad de agua. \n",
-    "# Te han proporcionado el historial (10 muestras en diferentes moemntos)de datos de calidad de agua en un mismo punto de agua potable:\n",
+    "# prompt_text = \"\"\"\n",
+    "# Given the following JSON file containing information about sensor readings from a water tank, including the city, the name of the water tank, the components being monitored, their acceptable thresholds, and their current measured values:\n",
     "\n",
-    "# \"{datos_calidad_agua}\"\n",
+    "# {water_data}\n",
     "\n",
-    "# Tu tarea es analizar los datos y ver si el valor mas reciente se desvía de la tendencia general de los datos.\n",
-    "# Dame una evaluación de la evolución y del estado actual de la calidad del agua en este punto de agua potable.\n",
-    "# Respuesta:\n",
-    "# \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ask_llm(llm, water_data):\n",
-    "    city_name = water_data[\"city\"]\n",
-    "    prompt_template = PromptTemplate(\n",
-    "            input_variables=[\"water_data\", \"city_name\"],\n",
-    "            template=prompt_text,\n",
-    "    )\n",
-    " \n",
-    "    # final_prompt = prompt_template.format(\n",
-    "    #                                 water_data=water_data\n",
-    "    #                                     , city_name=city_name\n",
-    "    # )\n",
-    "    \n",
-    "    # print(\"\\n\" + \"=\"*50)\n",
-    "    # print(\"🔍 PROMPT GENERADO:\")\n",
-    "    # print(final_prompt)\n",
-    "    # print(\"=\"*50 + \"\\n\")\n",
+    "# Write a formal email addressed to the City Council of {city_name}. The email should clearly and professionally state that we have analyzed the sensor data from the specified water tank and identified that some parameters have exceeded their acceptable thresholds. Mention the specific components affected, their current values, and the corresponding thresholds. Indicate that this anomaly could be due to a potential sensor malfunction, and suggest conducting a technical inspection to verify the status of the equipment. The message should be concise, professional, and direct.\n",
     "\n",
-    "    llm_chain = prompt_template | llm\n",
-    "    output = llm_chain.invoke({\"water_data\": water_data, \"city_name\": city_name})\n",
-    "    return output\n",
-    "\n",
-    "    "
+    "# End the email should be signed with the following line:\n",
+    "# \"This email was generated by the AI agent of the Minsaiters team after analyzing water quality sensor data from Pais Vasco.\"\n",
+    "# \"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "respuesta=ask_llm(llm, water_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "An analysis of the sensor data from the water tank in DONOSTIA-SAN SEBASTIAN has identified that some parameters have exceeded their acceptable thresholds. The affected components are:\n",
-      "\n",
-      "1. CONDUCTIVIDAD (20ºC): The current value is 118.411114, which is below the lower threshold of 120.4888685.\n",
-      "2. PH (20ºC): The current value is 7.700241, which is above the upper threshold of 7.6423135.\n",
-      "3. TEMPERATURA: The current value is 16.201304, which is above the upper threshold of 14.4083635.\n",
-      "4. TURBIDEZ: The current value is 0.019427, which is below the lower threshold of 0.0400595.\n",
-      "\n",
-      "These anomalies may be due to a potential sensor malfunction. We recommend performing a technical inspection to verify the condition of the equipment and ensure accurate data monitoring.\n",
-      "\n",
-      "This email was generated by the AI agent of the Minsaiters team after analyzing water quality sensor data from Pais Vasco\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(respuesta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_ibm import WatsonxLLM\n",
-    "params_dic= {\n",
-    "    \"decoding_method\": \"greedy\",\n",
-    "    \"min_new_tokens\": 0,\n",
-    "    \"max_new_tokens\": 280,\n",
-    "    \"repetition_penalty\": 1\n",
-    "    # \"stop_sequences\": [\"\\n\\n\"]\n",
-    "}\n",
-    "llm = WatsonxLLM(\n",
-    "    model_id=\n",
-    "            # \"meta-llama/llama-3-405b-instruct\",\n",
-    "            # \"meta-llama/llama-3-2-90b-vision-instruct\",\n",
-    "            # 'ibm/granite-13b-instruct-v2',\n",
-    "           'ibm/granite-3-8b-instruct',\n",
-    "            \n",
-    "    url=url,\n",
-    "    apikey=watsonx_apikey,\n",
-    "    project_id=project_id,\n",
-    "    params=params_dic\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,8 +301,8 @@
     "\n",
     "\n",
     "Input: {{\n",
-    "  \"city\": \"DONOSTIA-SAN SEBASTIAN\",\n",
-    "  \"water_tank_name\": \"Deposito de Putzueta\",\n",
+    "  \"city\": \"VITORIA\",\n",
+    "  \"water_tank_name\": \"Deposito de Bidebieta\",\n",
     "  \"component\": [\n",
     "    {{\n",
     "      \"name\": \"CONDUCTIVIDAD (20ºC)\",\n",
@@ -461,7 +331,10 @@
     "  ]\n",
     "}}\n",
     "\n",
-    "Output: An analysis of the sensor data from the water tank in DONOSTIA-SAN SEBASTIAN has identified that some parameters have exceeded their acceptable thresholds. The affected components are:\n",
+    "Output:\n",
+    "Dear Vitoria City Council,\n",
+    "\n",
+    "An analysis of the sensor data from the water tank Bidebieta in Vitoria has identified that some parameters have exceeded their acceptable thresholds. The affected components are:\n",
     "\n",
     "1. CONDUCTIVIDAD (20ºC): The current value is 116.30, which is below the lower threshold of 120.48.\n",
     "2. PH (20ºC): The current value is 7.90, which is above the upper threshold of 7.64.\n",
@@ -470,18 +343,129 @@
     "\n",
     "These anomalies may be due to a potential sensor malfunction. We recommend performing a technical inspection to verify the condition of the equipment and ensure accurate data monitoring.\n",
     "\n",
-    "This email was generated by the AI agent of the Minsaiters team after analyzing water quality sensor data from Pais Vasco.\n",
+    "Best regards,\n",
+    "\n",
+    "This email was generated by the AI agent of the Minsaiters team after analyzing water quality sensor data from País Vasco.\n",
     "\n",
     "\n",
     "Input: {water_data}\n",
     "Output:\n",
     "\"\"\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_water_data(total_water_data):\n",
+    "    water_data = {\n",
+    "    \"city\": total_water_data[\"city\"],\n",
+    "    \"water_tank_name\": total_water_data[\"water_tank_name\"],\n",
+    "    \"component\": [\n",
+    "        {\n",
+    "            \"name\": c[\"name\"],\n",
+    "            \"current_value\": c[\"current_value\"],\n",
+    "            \"lower_threshold\": c[\"lower_threshold\"],\n",
+    "            \"upper_threshold\": c[\"upper_threshold\"]\n",
+    "        }\n",
+    "        for c in total_water_data[\"component\"]\n",
+    "        if c[\"component_alert\"] == \"KO\"\n",
+    "    ]\n",
+    "    }\n",
+    "    return water_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ask_llm(llm, water_data):\n",
+    "    \n",
+    "    prompt_template = PromptTemplate(\n",
+    "            input_variables=[\"water_data\"],\n",
+    "            template=prompt_text,\n",
+    "    )\n",
+    " \n",
+    "    llm_chain = prompt_template | llm\n",
+    "    output = llm_chain.invoke({\"water_data\": water_data})\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response=ask_llm(llm, water_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear Donostia-San Sebastian City Council,\n",
+      "\n",
+      "An analysis of the sensor data from the water tank Putzueta in Donostia-San Sebastian has identified that some parameters have exceeded their acceptable thresholds. The affected components are:\n",
+      "\n",
+      "1. CONDUCTIVIDAD (20ºC): The current value is 118.411, which is below the lower threshold of 120.488.\n",
+      "2. PH (20ºC): The current value is 7.7, which is below the lower threshold of 7.426.\n",
+      "3. TEMPERATURA: The current value is 16.201, which is above the upper threshold of 14.408.\n",
+      "4. TURBIDEZ: The current value is 0.019, which is below the lower threshold of 0.04.\n",
+      "\n",
+      "These anomalies may be due to a potential sensor malfunction. We recommend performing a technical inspection to verify the condition of the equipment and ensure accurate data monitoring.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "This email was generated by the AI agent of the Minsaiters team after analyzing water quality sensor data from País Vasco.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def ask_llm(llm, water_data):\n",
+    "#     city_name = water_data[\"city\"]\n",
+    "#     prompt_template = PromptTemplate(\n",
+    "#             input_variables=[\"water_data\", \"city_name\"],\n",
+    "#             template=prompt_text,\n",
+    "#     )\n",
+    " \n",
+    "#     # final_prompt = prompt_template.format(\n",
+    "#     #                                 water_data=water_data\n",
+    "#     #                                     , city_name=city_name\n",
+    "#     # )\n",
+    "    \n",
+    "#     # print(\"\\n\" + \"=\"*50)\n",
+    "#     # print(\"🔍 PROMPT GENERADO:\")\n",
+    "#     # print(final_prompt)\n",
+    "#     # print(\"=\"*50 + \"\\n\")\n",
+    "\n",
+    "#     llm_chain = prompt_template | llm\n",
+    "#     output = llm_chain.invoke({\"water_data\": water_data, \"city_name\": city_name})\n",
+    "#     return output\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hackaton",
+   "display_name": "ibm_env_test",
    "language": "python",
    "name": "python3"
   },
@@ -495,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
